# vosk_ros2

./: .gitignore  README.md
docker/: Dockerfile  build.sh  compose.yaml  ros_entrypoint.sh
scripts/: build_fst.sh  demo.jsgf  gpsr.jsgf
vosk_ros2/: package.xml  setup.cfg  setup.py
vosk_ros2/grammar/: ask_name  yes_no
vosk_ros2/vosk_ros2/: grammar_parser.py  json_parser.py  speaker_rec.py  speech_recognition.py  vosk_ros2_node.py
vosk_ros2_interfaces/: CMakeLists.txt  package.xml
vosk_ros2_interfaces/action/: SpeechDetection.action
vosk_ros2_interfaces/msg/: Alternative.msg  RecognizedSpeech.msg  Result.msg  Speaker.msg
vosk_ros2_interfaces/srv/: AddSpeaker.srv  SetGrammar.srv
